Fix image overlay background overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,12 +100,19 @@ textarea {
     margin-top: 10px;
 }
 
+.portfolio-item {
+    padding: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .image-text-overlay {
     width: 276px;
     height: 3.75rem;
-    max-width: 80%;
+    max-width: 100%;
     color: #ffffff;
     background-color: #4aaaa5;
+    overflow: hidden;
     position: absolute;
     top: 80%;
     left: 50%;
